--- a/src/components/Pages/Home/Sections/Resume/Resume.css
+++ b/src/components/Pages/Home/Sections/Resume/Resume.css
@@ -1,9 +1,7 @@
 #resume {
   background-color: #272727;
   color: lightgray;
-  
-
-  
+  padding: 15px;
   height: 100%;
   background-position: center;
   background-size: cover;
