--- a/src/components/Pages/Home/Sections/About_Header/AboutHeader.css
+++ b/src/components/Pages/Home/Sections/About_Header/AboutHeader.css
@@ -3,7 +3,7 @@
   background-image: url("../../../../../images/computer.jpg");
   height: 400px;
   background-color: #e6990b;;
-  color: white;
+  color: black;
   padding: 15px;
   background-position: center;
   background-size: cover;
