--- a/src/components/Pages/Home/Sections/Contact_Header/ContactHeader.css
+++ b/src/components/Pages/Home/Sections/Contact_Header/ContactHeader.css
@@ -1,6 +1,7 @@
 
 #contact-header {
-  background-image: url("../../../../../images/keyboard_med.jpg");
+  /* background-image: url("../../../../../images/keyboard_med.jpg"); */
+  background-image: url("../../../../../images/computer.jpg");
   height: 350px;
   background-color: #e6990b;
   color: white;
@@ -10,7 +11,10 @@
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-repeat: no-repeat;
-
+  /* color: white; */
+  color: black;
+  text-shadow:2px 2px 1px white;
+  
 }
 
 #contact-location {
