--- a/src/components/Pages/Home/Sections/Contact_Header/ContactHeader.css
+++ b/src/components/Pages/Home/Sections/Contact_Header/ContactHeader.css
@@ -1,7 +1,7 @@
 
 #contact-header {
-  /* background-image: url("../../../../../images/keyboard_med.jpg"); */
-  background-image: url("../../../../../images/computer.jpg");
+  background-image: url("../../../../../images/keyboard_med.jpg");
+  /* background-image: url("../../../../../images/computer.jpg"); */
   height: 350px;
   background-color: #e6990b;
   color: white;
@@ -11,9 +11,8 @@
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-repeat: no-repeat;
-  /* color: white; */
-  color: black;
-  text-shadow:2px 2px 1px white;
+  /* color: black; */
+  /* text-shadow:2px 2px 1px white; */
   
 }
 
