--- a/src/components/Pages/Home/Sections/Resume/Resume_HIDDEN_while_under_constr.css
+++ b/src/components/Pages/Home/Sections/Resume/Resume_HIDDEN_while_under_constr.css
@@ -1,9 +1,8 @@
 #resume {
   background-color: #272727;
   color: lightgray;
-  
-
-  
+  /* comment out padding line if not displaying resume, to hide black band from section */
+  /* padding: 15px; */
   height: 100%;
   background-position: center;
   background-size: cover;
@@ -41,9 +40,8 @@
   box-shadow: 0 4px 3px #0d47a1;
 }
 
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-  #resume {
-    height: 0;
-    display: none;
-  }
+
+@media screen and (min-width: 0px) and (max-width: 800px) {
+  #hide-if-mobile { display: none; }  /* hide resume section on small screens, doesn't work properly on mobile */
 }
+
